<resources>
    <string name="app_name">Yawe Guild App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="gallery">Gallery</string>
    <string name="my_account">My Account</string>
    <string name="hello_world">Hello World</string>
    <string name="is_a_new_admin">is a new admin?</string>
    <string name="create_a_new_user">Create a new User</string>
    <string name="is_a_heretic">is a heretic?</string>
    <string name="create_this_new_user">Create this new User</string>
    <string name="put_password">Put a password please</string>
    <string name="put_username">Put a username please</string>
    <string name="post_this_picture">Post this picture</string>
    <string name="create_a_new_picture">Create a new Picture</string>
    <string name="chat">Chat</string>
    <string name="say_nice_thing_please">Say nice thing please</string>
    <string name="description_here">Description here</string>
    <string name="create_a_new_event">Create a new event</string>
    <string name="description">Description</string>
    <string name="title">Title</string>

    <string name="welcome_to_your_account">Welcome to your account:</string>
    <string name="change_password">Change password</string>
    <string name="create_this_event">Create this event</string>
    <string name="title_of_your_picture_not_obligatory">title of your picture (not obligatory)</string>
    <string name="description_of_your_picture_not_obligatory">description of your picture (not obligatory)</string>
    <string name="url_of_the_picture">url of the picture</string>
    <string name="no_space_in_the_name">No space in the name</string>
    <string name="delete">Delete</string>
    <string name="id_user">Id user</string>
    <string name="list_of_users">List of users</string>
    <string name="author">Author</string>
    <string name="detail">Detail</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="edit">Edit</string>
    <string name="change_title">Change title</string>
    <string name="change_description">Change description</string>
    <string name="change_url">Change url</string>
    <string name="create_a_new_event_for_the_guild">Create a new event for the guild</string>
    <string name="you_dont_have_internet">You don\'t have internet connection</string>
    <string name="carefull_with_mobile_data">Be carefull with your mobile data</string>
    <string name="bad_password">Bad password</string>
    <string name="bad_username">Bad username</string>
    <string name="list_of_events">List of events</string>
    <string name="change_admin_attribut">Change admin attribut</string>
    <string name="change_heretic_atribut">Change heretic atribut</string>
    <string name="he_is_heretic">This user is heretic</string>
    <string name="he_is_not_heretic">This user isn\'t heretic</string>
    <string name="he_is_admin">This user is an admin</string>
    <string name="he_is_not_admin">This user isn\'t an admin</string>
    <string name="the_username">The username</string>
    <string name="by">"By: "</string>
    <string name="welcome_dear_member_of_the_guilde">Log you</string>
    <string name="home">HOME</string>
    <string name="welcome_in_the_yawe_guild_app">Hello</string>
    <string name="you_are_admin">Ho, you are an admin... be carefull with your power!</string>
    <string name="you_are_heretic">Well, you are an heretic! Why? What have you do to ours lovely boss?</string>
    <string name="bad_name_password">Bad username or bad password</string>
    <string name="zone_admin">Zone admin</string>
    <string name="date">Date</string>
    <string name="long_score">----------</string>
    <string name="bla_bla_bla_bla">Bla bla bla bla</string>
    <string name="say_message">Send message</string>
    <string name="admin">Admin?</string>
    <string name="heretic">Heretic?</string>
    <string name="remember_me">Remember me?</string>
    <string name="are_you_sur">Are you sur?</string>
    <string name="change_to_not_here">Change this member to not heretic</string>
    <string name="change_to_here">Change this member to heretic</string>
    <string name="change_to_admin">Change this member to admin</string>
    <string name="change_to_not_admin">Change this member to not admin</string>
    <string name="edit_the_message_of_the_guild">Edit the message of the guild:</string>
    <string name="the_guild_message">the guild message</string>
    <string name="edit_the_guild_message">Edit the guild message</string>
    <string name="upload_a_picture_by_your_web_browser">Upload a Picture by your web browser</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_roll_race">Main roll race</string>
    <string name="tweet_empty">Your tweet is empty...</string>
    <string name="max_140">Max 140 character please!</string>
    <string name="response">Response: </string>
    <string name="response_tweet_title">The response of the tweet:</string>
    <string name="list_member">List Member</string>
    <string name="delete_this_picture">Delete this picture</string>
    <string name="edit_this_picture">Edit this picture</string>
    <string name="name">Name</string>
    <string name="comment_author">Comment Author</string>
    <string name="comment_date">Comment date</string>
    <string name="comment_hour">Comment hour</string>
    <string name="comment_text">Comment text</string>
    <string name="member_page_of">Member page of:</string>
    <string name="race">Race</string>
    <string name="profession">Profession</string>
    <string name="post_a_tweet">Post a tweet:</string>
    <string name="i_have_eat_potato">I have eat potato!</string>
    <string name="post_your_tweet">Post your tweet</string>
    <string name="main_roll_profession">Main roll profession:</string>
    <string name="main_roll_gameplay_style">Main roll gameplay style:</string>
    <string name="your_main_roll_gameplay_style">Your main roll gameplay style</string>
    <string name="favorite_activity_in_gw2">Favorite Activity in GW2:</string>
    <string name="your_favorite_activity_in_gw2">Your favorite activity in GW2</string>
    <string name="my_mood_of_the_moment">My mood of the moment:</string>
    <string name="what_is_your_mood">What is your mood?</string>
    <string name="update_my_detail">Update my detail</string>
    <string name="activity">Activity</string>
    <string name="mood">Mood:</string>
    <string name="edit_my_profil">Edit my profil</string>
    <string name="tweet">Tweet:</string>
    <string name="edit_the_picture">Edit the picture:</string>
    <string name="post_date">Post Date</string>
    <string name="gameplay_style">Gameplay style:</string>
    <string name="comment">Comment:</string>
    <string name="wooo_what_a_beautiful_picture">Wooo, what a beautiful picture!</string>
    <string name="list_of_comments">List of comments:</string>
    <string name="message_empty">Your message is empty...</string>
    <string name="not_more_200">Not more than 200 characters please</string>
    <string name="picture_edit">Picture was edited</string>
    <string name="you_are_not_admin">You aren\'t admin!</string>
    <string name="new_tweet">Your new tweet</string>
    <string name="kill_german_player">You have kill a german player in WvW? Say it!</string>
    <string name="post_new_tweet">Post a new tweet</string>
    <string name="tweet_posted">Tweet posted!</string>
    <string name="cancel">Cancel</string>
    <string name="password_change">Password change</string>
    <string name="password_not_same">Passwords isn\'t the same</string>
    <string name="new_pass">Put a new password please</string>
    <string name="download_picture">Download this picture?</string>
    <string name="redic_browser">You will be redirected to your browser</string>
    <string name="no_please">No please</string>
    <string name="delete_beautiful">You are going to delete this beautiful picture!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="picture_not_delete">Picture not deleted</string>
    <string name="not_delete_picture_adminorauthor">You aren\'t admin or the author of this picture, you can\'t delete this</string>
    <string name="not_edit_not_author">You aren\'t the author of this picture, you can\'t edit this</string>
    <string name="delete_member_sur">You are going to delete this member!</string>
    <string name="user_not_delete">User not deleted</string>
    <string name="remove_admin_power">You are going to remove admin power to this user!</string>
    <string name="give_admin_power">You are going to give admin power to this user!</string>
    <string name="member_not_changed">Member not changed</string>

    <string name="its_maximum">It\'s maximum</string>
    <string name="character">characters</string>
</resources>
