<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.caribou.yaweapp.MyAccountActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_account_name"
            style="@style/H2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_to_your_account" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/H6"
            android:text="@string/post_a_tweet"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_account_tweet"
            android:hint="@string/i_have_eat_potato"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_account_tweet"
            android:text="@string/post_your_tweet"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_roll_race"
            style="@style/H6" />

        <Spinner
            android:id="@+id/sp_account_race"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_roll_profession"
            style="@style/H6"/>

        <Spinner
            android:id="@+id/sp_account_profession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_roll_gameplay_style"
            style="@style/H6" />

        <EditText
            android:id="@+id/ed_account_gameplay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/your_main_roll_gameplay_style" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite_activity_in_gw2"
            style="@style/H6" />

        <EditText
            android:id="@+id/ed_account_activity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/your_favorite_activity_in_gw2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_mood_of_the_moment"
            style="@style/H6" />

        <EditText
            android:id="@+id/ed_account_mood"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/what_is_your_mood" />

        <Button
            android:id="@+id/bt_account_updateDetail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/update_my_detail" />


        <EditText
            android:id="@+id/ed_account_newPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/new_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/ed_account_ConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/bt_account_changePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password" />


    </LinearLayout>

</ScrollView>
