<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.caribou.yaweapp.CreatePictureActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/H2"
            android:text="@string/create_a_new_picture"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_createPicture_title"
            android:hint="@string/title_of_your_picture_not_obligatory"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_createPicture_description"
            android:height="100dp"
            android:hint="@string/description_of_your_picture_not_obligatory"
            />

        <!-- TODO a terme, prendre une image du gsm -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_createPicture_url"
            android:hint="@string/url_of_the_picture"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_createPicture_createPicture"
            android:text="@string/post_this_picture"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_createPicture_goToWebSite"
            android:text="@string/upload_a_picture_by_your_web_browser"
            />
    </LinearLayout>


</ScrollView>
