<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_member_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.caribou.yaweapp.MemberDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_memberDetail_title"
            android:text="@string/member_page_of"
            style="@style/H1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_memberDetail_name"
            style="@style/H2"
            android:text="@string/name"
            android:layout_marginBottom="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_memberDetail_race"
                android:text="@string/race"
                android:gravity="center"
                android:layout_weight="1"
                style="@style/H4"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_memberDetail_profession"
                android:layout_weight="1"
                android:gravity="center"
                style="@style/H4"
                android:text="@string/profession"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/H6"
            android:text="@string/gameplay_style"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_memberDetail_gameplay"
            android:text="@string/gameplay_style"
            style="@style/H4"
            android:gravity="left"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/H6"
            android:text="@string/activity"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_memberDetail_activity"
            android:text="@string/activity"
            style="@style/H4"
            android:gravity="left"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mood"
            style="@style/H6"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_memberDetail_mood"
            android:text="@string/mood"
            style="@style/H4"
            android:gravity="left"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_my_profil"
            android:id="@+id/bt_memberDetail_edit"
            android:visibility="gone"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_a_tweet"
            android:id="@+id/bt_memberDetail_postTweet"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tweet"
            style="@style/H6"
            />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lv_memberDetail_tweet">
        </ListView>


    </LinearLayout>

</ScrollView>
