<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".fragment.AdminFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zone_admin"
            style="@style/H1" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/bt_main_createUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_user" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_main_listUser"
            android:text="@string/list_of_users"
            />

        <Button
            android:id="@+id/bt_main_createEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_event" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bt_main_editMessage"
            android:text="@string/edit_the_guild_message"
            />

    </LinearLayout>

</ScrollView>
