<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.caribou.yaweapp.EventDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tv_eventDetail_title"
            style="@style/H2"
            android:text="@string/title"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/H4"
            android:id="@+id/tv_eventDetail_description"
            android:text="@string/description"
            />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/tv_eventDetail_date"
            style="@style/H3"
            android:text="@string/date"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/bt_eventDetail_delete"
            android:text="@string/delete"
            android:visibility="gone"
            />

    </LinearLayout>

</ScrollView>
